--- a/static/style.css
+++ b/static/style.css
@@ -283,6 +283,7 @@ button {
   margin-bottom: 10px;
 }
 
+/* messages */
 .chat .messages {
   display: grid;
   grid-template-columns: 200px 1fr;
@@ -291,14 +292,14 @@ button {
   height: auto;
 }
 
-.chat message {
+.chat .messages .message {
   display: grid;
   grid-column: 1/3;
   grid-template-columns: 200px 1fr;
   border-bottom: 1px solid lightgray;
 }
 
-.chat message author {
+.chat .messages .message .author {
   color: #c93;
   font-weight: bold;
   display: block;
@@ -306,11 +307,13 @@ button {
   grid-column: 1/2;
 }
 
-.chat message content {
+.chat .messages .message .content {
   display: block;
   padding: 5px;
   grid-column: 2/3;
 }
+
+
 
 .profileDetails {
   display: grid;
