--- a/templates/room.html
+++ b/templates/room.html
@@ -20,22 +20,18 @@
   {% if room %}
   <div class="roomData">
     <div>Chatting in:</div>
+    <!-- Existing display section, no change required -->
     <h3 class="display">
       <span class="roomName">{{ room['name'] }}</span>
-      <!-- TODO: when clicked, 
-        - remove `hide` from the `edit` h3 below
-        - add `hide` to the parent h3 here -->
-      <a href="#"><span class="material-symbols-outlined">edit</span></a></h3>
+      <a href="#" onclick="showEditUI()"><span class="material-symbols-outlined">edit</span></a>
     </h3>
-    <h3 class="edit hide">
-      <input value="{{ room['name'] }}">
-      <!-- TODO: when clicked,
-        - POST to update the room name
-        - update `roomName` above with the new name
-        - remove `hide` from the `display` h3 above
-        - add `hide` to the parent h3 here -->
-      <a href="#"><span class="material-symbols-outlined">save</span></a></h3>
+
+    <!-- Adjusted edit section -->
+    <h3 class="edit hide" id="editNameSection">
+      <input id="editRoomName" value="{{ room['name'] }}">
+      <a href="#" onclick="saveRoomName({{ room['id'] }})"><span class="material-symbols-outlined">save</span></a>
     </h3>
+
     <div class="invite">
       Invite users to this chat at:
       <a href="/rooms/{{ room['id'] }}" id="invite link">/rooms/{{ room['id'] }}</a>
@@ -49,37 +45,14 @@
   {% if room %}
   <div class="chat">
     <div class="comment_box">
-      <form>
+      <form id="postMessageForm">
         <label for="comment">What do you have to say?</label>
-        <textarea name="comment"></textarea>
-        <button type="submit" value="Post">Post</button>
+        <textarea name="comment" id="messageInput"></textarea>
+        <button type="button" onclick="postMessage()">Post</button>
       </form>
     </div>
     <div class="messages">
-      <message>
-        <author>Mr Chatterworth</author>
-        <content>Good evening! And how is everyone feeling?</content>
-      </message>
-      <message>
-        <author>big chats</author>
-        <content>gr8 lol</content>
-      </message>
-      <message>
-        <author>Mr Chatterworth</author>
-        <content>Splendid!</content>
-      </message>
-      <message>
-        <author>Chatty Cat</author>
-        <content>
-          Meow meow meow meow meow meow meow meow meow meow meow 
-          meow meow meow meow meow meow meow meow meow meow meow 
-          meow meow meow meow meow meow meow meow meow meow meow 
-        </content>
-      </message>
-      <message>
-        <author>Mr Chatterworth</author>
-        <content>Indeed, M. Cat. Indeed. 🧐</content>
-      </message>
+      <!-- message content dynamically added here -->
     </div>
   </div>
   {% else %}
